
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
  
   152: sluys, 13/05/2009
     - moved files in doc/ around
   
   151: sluys, 13/05/2009
     - changed mcmc.input: added file name for system-dependent parameters
       (see doc/mcmc.input)
            
   149: sluys, 07/05/2009
     - added GNU licence stuff
   
   148: sluys, 30/04/2009
     - named the code SPINspiral
   
   147: sluys, 16/04/2009
     - fixed SNR scaling for log(d) as MCMC parameter
   
   145: sluys, 13/04/2009
     - removed printing of build info to screen: system( NULL ) seems to be 
       incompatible with condor_compile
   
   144: sluys, 13/04/2009
     - store duplicate of best parameter values (parBestVal) as injection values
       (injParVal) and prior_tc_mean in case of no SW injection
     
   140: sluys, 10/04/2009
     - removed the waveform_*.c files from the repository (still have a backup)
   
   139: sluys, 09/04/2009
     - removed two bugs:
       - mcmc_parameters.c: getInjectionParameters(): still need to pass par->mc and par->eta
       - mcmc_main.c: line~157: "Global :...": parIDs 54 and 53 are not always defined
     - added parameter headers to screen and file output
     - added really short parameter abbreviations
   
   134: sluys, 20/02/2009
     - implemented part of the functionality of the mcmc.parameters input file
       - prior routines are now waveform-independent, much smaller and moved back 
         to mcmc_mcmc.c	
       - I removed mcmc_prior.c, because it was empty
       - prior information can be set in the mcmc.parameters input file
     
   133: sluys, 20/02/2009
     - finished injection routines; software injections can be done 
       using mcmc.injection, either using the values specified, or
       using random values (from Gaussian or uniform distributions)
   
   132: sluys, 20/02/2009