@@ -11,11 +11,11 @@
   #Parameters:                                                                                                           
   #Number:     ID:     InjectionValue:     ranInjPar:     Sigma:     BoundType:     BoundLow:           BoundUp:                        Description:
 								                                               
-  1            61      6.0836              0              0.1        1              3.000               12.000                          Mc             chirp mass (Mo)
+  1            61      3.0836              0              0.1        1              3.000               12.000                          Mc             chirp mass (Mo)
   2            62      0.2222              0              0.1        1              0.03                0.25                            eta            symmetric mass ratio (-)
   3            11      894377000.00000     0              0.1        2              -0.05000            0.05000                         t_c            GPS time of coalescence (s)
   4            22      2.8904              0              0.1        1              -6.9                4.6                             log(d_L)       log of luminosity distance (Mpc)
-  5            71      1.0000              0              0.1        1              0.000               1.000                           a_spin1        spin magnitude of object 1 (-)
+  5            71      0.9000              0              0.1        1              0.000               1.000                           a_spin1        spin magnitude of object 1 (-)
   6            72      0.1000              0              0.1        1              -1.000              1.000                           cos theta1     spin tilt of object 1 (-)
   7            31      0.8000              0              0.1        1              0.0                 6.28                            alpha          right ascension (rad)
   8            32      0.9000              0              0.1        1              -1.000              1.000                           sin(delta)     sin declination (-)
